fix: style overflow due to user content

--- a/styles/global.css
+++ b/styles/global.css
@@ -56,7 +56,7 @@ body {
       --at-apply: 'hidden';
     }
     .ellipsis {
-      --at-apply: 'truncate overflow-hidden ws-nowrap';
+      --at-apply: 'line-clamp-1 ws-pre-wrap break-all';
       &::after {
         content: '…';
       }
@@ -86,6 +86,7 @@ body {
 
 .content-editor {
   --at-apply: outline-none flex-1;
+  max-width: 100%;
 }
 
 .content-editor.content-rich {
